Added Authentication with JWT functionality along with Unit test cases
