# AccountApp/models.py
@@ -1,0 +1,28 @@
+from django.db import models
+from django.contrib.auth.models import AbstractBaseUser, PermissionsMixin
+from django.utils.translation import gettext_lazy as _
+from .manager import UserManager
+from rest_framework_simplejwt.tokens import RefreshToken
+
+class User(AbstractBaseUser, PermissionsMixin):
+    email = models.EmailField(max_length=255, unique=True, verbose_name=_("Email Address"))
+    is_superuser= models.BooleanField(default=False)
+    is_staff = models.BooleanField(default=False)
+    # is_verified = models.BooleanField(default=False)
+    is_active = models.BooleanField(default=True)
+    date_joined = models.DateTimeField(auto_now_add=True)
+    last_login = models.DateTimeField(auto_now=True)
+
+    USERNAME_FIELD = "email"
+
+    objects= UserManager()
+
+    def __str__(self):
+        return self.email
+    
+    def tokens(self):
+        refresh = RefreshToken.for_user(self)
+        return {
+            'refresh': str(refresh),
+            'access': str(refresh.access_token)
+        }
